cluster/apps/networking/external-services/stash/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: &app stash
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
subsets:
  - addresses:
      - ip: 192.168.1.50
    ports:
      - port: 9999
        name: http
