cluster/apps/networking/external-services/stash/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: &app stash
  namespace: networking
  labels:
    app.kubernetes.io/name: *app
    app.kubernetes.io/instance: *app
spec:
  ports:
    - name: http
      port: &port 9999
      protocol: TCP
      targetPort: *port
